[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectorizer_sdk"
version = "3.5.0"
description = "Python SDK for Vectorizer - Semantic search, vector operations, and the VectorizerRPC binary transport (default in v3.x)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "HiveLLM Team", email = "team@hivellm.org"}
]
keywords = [
    "vectorizer",
    "semantic-search",
    "embeddings",
    "machine-learning",
    "ai",
    "search",
    "vectors",
    "similarity",
    "hivellm",
    "umicp"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "aiohttp>=3.10.11",
    "msgpack>=1.1.1",
]

[project.optional-dependencies]
umicp = [
    "umicp-python>=0.1.3",
]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=25.0.0",
    "isort>=5.13.2",
    "flake8>=7.1.2",
    "mypy>=1.14.1",
    "pre-commit>=4.0.0",
]
docs = [
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=3.1.0",
    "myst-parser>=3.0.1",
]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/hivellm/vectorizer"
Documentation = "https://github.com/hivellm/vectorizer/tree/main/docs"
Repository = "https://github.com/hivellm/vectorizer"
Issues = "https://github.com/hivellm/vectorizer/issues"

[project.scripts]
vectorizer-cli = "cli:main"

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

