[package]
name = "vectorizer-sdk"
version = "1.8.0"
edition = "2024"
authors = ["HiveLLM Contributors"]
description = "Rust SDK for Vectorizer - High-performance vector database"
license = "Apache-2.0"
repository = "https://github.com/hivellm/vectorizer.git"
keywords = ["vector-database", "semantic-search", "embeddings", "rust"]
categories = ["database", "science"]

[dependencies]
# Dependencies matching vectorizer versions
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = { version = "1.0", features = ["backtrace"] }
tracing = "0.1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Async trait for transport abstraction
async-trait = "0.1"

# UMICP protocol support
umicp-core = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
umicp = ["umicp-core"]